fixed white space in view more

--- a/my-app/src/TestNav/Test.css
+++ b/my-app/src/TestNav/Test.css
@@ -229,7 +229,7 @@ input:focus {
         margin-top: 10px;
     }
     .button-submit{
-        width: 50px;
+        width: 70px;
         margin-left: 0;
     }
     .burg{
